// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Cell component Should render properly 1`] = `
<div
  className="cell"
  style={
    Object {
      "background": "rgba(0, 0, 0, 0.8)",
      "border": "1px solid",
      "borderColor": "rgba(0, 0, 0, 1)",
      "width": "auto",
    }
  }
/>
`;

exports[`Test Cell component Should render properly for 4 player 1`] = `
<div
  className="cell"
  style={
    Object {
      "background": "rgba(186,225,255, 0.8)",
      "border": "0.3vw solid",
      "borderColor": "rgba(186,225,255, 1)",
      "width": "auto",
    }
  }
/>
`;
